--- a/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
+++ b/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
@@ -48,7 +48,7 @@
 			    <!-- Main -->
 				<section id="main" class="container">
 					<div class="box">
-						<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/444376998&color=%23181818&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+						<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/448147206&color=%23303030&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 						<br>
 
 						<h3>Download</h3>
@@ -56,7 +56,7 @@
 						
 						<h3>Sobre este episódio</h3>
 						<p>
-                            Nesse primeiro episódio nós iremos dar uma pequena prévia de como podem ser dados os primeiros passos para se tornar 
+                            Nesse episódio nós iremos dar uma pequena prévia de como podem ser dados os primeiros passos para se tornar 
                             um desenvolvedor web. Abordamos desde conceitos técnicos estruturais sobre a Web até um dos destinos da área: como 
                             iniciar no Desenvolvimento Front-End. Não deixamos de citar referências, comunidades e sem deixar de 
                             lado a cultura Hip Hop.
@@ -120,7 +120,7 @@
 										<li><a href="https://www.youtube.com/watch?v=FRhM6sMOTfg&list=PLwXQLZ3FdTVGf7GUtiOFLc_9AXO25iIzG">Curso CSS3 - Node Studio Treinamentos</a></li>
 										<li><a href="https://www.youtube.com/watch?v=4ZAOWlZRbZk&list=PLwXQLZ3FdTVG_mqZcOXhfFf3Po6whFv8o">Curso de Lógica de Programação - Node Studio Treinamentos</a></li>
 										<li><a href="https://www.youtube.com/watch?v=YoDJsSII2Ug&list=PLwXQLZ3FdTVGKl3iPEyEWpFoYkMUxWW5O">Curso de HTML5 - Node Studio Treinamentos</a></li>
-										<li><a href="https://www.youtube.com/watch?v=ftWXUUM5YxU&list=PLBnXXDBNZQpJKH1Fx2EAbKbG9p_dV_pKW">Curso JavaScript</a></li>
+										<li><a href="https://www.youtube.com/watch?v=ftWXUUM5YxU&list=PLBnXXDBNZQpJKH1Fx2EAbKbG9p_dV_pKW">Curso JavaScript - Keven Jesus</a></li>
 										<li><a href="https://stackoverflow.com">Stackoverflow</a></li>
 									</ul>
 								</p>
