Tirando código de namorada que apareceu magicamente

--- a/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
+++ b/podcast-1-iniciando-no-desenvolvimento-web-front-end.html
@@ -165,7 +165,7 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">namorada
+					<ul class="icons">
 						<li><a href="https://twitter.com/QuebraDev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/QuebraDev" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://soundcloud.com/quebra-dev" class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
