retirando class special

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<!-- Main -->
 				<section id="main" class="container">
 
-					<section class="box special">
+					<section class="box">
 						<header class="major">
 							<h2>Quem Somos</h2>
 							<p>O QuebraDev é um podcast de origem periférica que surgiu de forma independente 
