Nova pagina do novo episodio

--- a/index.html
+++ b/index.html
@@ -58,11 +58,32 @@
 
 							<section class="box special">
 								<span class="image featured">
+									<a href="podcast-2-iniciando-no-desenvolvimento-web-back-end.html">
+										<img src="images/iniciando-no-desenvolvimento-web-front-end.png" alt="" width="400" />
+									</a>
+								</span>
+								<a href="podcast-1-iniciando-no-desenvolvimento-web-front-end.html"><h3>#2 - Iniciando no desenvolvimento web - BackEnd.</h3></a>
+								<p> 
+									Sabe o mundo backend? Ele não é tão dificil assim, vem com a gente e descubra como 
+                        			dar os primeiros passos nesta área de desenvolvimento.
+								</p>
+								<ul class="actions">
+									<li>
+										<a href="podcast-2-iniciando-no-desenvolvimento-web-back-end.html" class="button alt">Ver</a>
+									</li>
+								</ul>
+							</section>
+
+						</div>
+						<div class="4u">
+
+							<section class="box special">
+								<span class="image featured">
 									<a href="podcast-1-iniciando-no-desenvolvimento-web-front-end.html">
 										<img src="images/iniciando-no-desenvolvimento-web-front-end.png" alt="" width="400" />
 									</a>
 								</span>
-								<a href="podcast-1-iniciando-no-desenvolvimento-web-front-end.html"><h3>#1 - Iniciando no desenvolvimento web.</h3></a>
+								<a href="podcast-1-iniciando-no-desenvolvimento-web-front-end.html"><h3>#1 - Iniciando no desenvolvimento web - FrontEnd.</h3></a>
 								<p> 
 									Ainda tem aquela dúvida de como começar a estudar para tornar um desenvolvedor web?
 									Chega mais cuidado ao da o play.
