matheus tbm trampa nesse podcast

--- a/podcast-2-iniciando-no-desenvolvimento-web-back-end.html
+++ b/podcast-2-iniciando-no-desenvolvimento-web-back-end.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>QuebraDev - Podcast #1 - Iniciando no desenvolvimento web - Back End</title>
+		<title>QuebraDev - Podcast #2 - Iniciando no desenvolvimento web - Back End</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -139,7 +139,15 @@
 								<h4>Músicas</h4>
 								<p>
 									<ul>
-										
+                    <li>De Menos Crime - Zona Leste Alerta (Apresentação DJ Wlad)</li>
+                    <li>RZO - O Trem</li>
+                    <li>Racionais MC’s - Qual Mentira Vou Acreditar</li>
+                    <li>SNJ - Se Tu Lutas Tu Conquistas</li>
+                    <li>Sabotage - Mun Ra</li>
+                    <li>Ndee Naldinho - Melô do Corinthians</li>
+                    <li>Trilha Sonora do Gueto - Favela Sinistra</li>
+                    <li>Dina Di - Amor e Ódio</li>
+                    <li>Thaide e DJ Hum - Que Tempo Bom</li>
 									</ul>
 								</p>
 							</div>
