--- a/podcast-2-iniciando-no-desenvolvimento-web-back-end.html
+++ b/podcast-2-iniciando-no-desenvolvimento-web-back-end.html
@@ -66,7 +66,7 @@
 								<h3>Participantes</h3>
 								<p>
 									<ul>
-										<li>Kaio Teixeira - <b>Host</b>
+										<li>Kaio Leal - <b>Host</b>
 											<ul>
 												<li><a href="https://twitter.com/teixeirak_" target="_blank">Twitter</a></li>
 												<li><a href="https://github.com/kteixeira" target="_blank">Github</a></li>
