Pagina do episódio 3

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="@nytimesbits" />
 		<meta name="twitter:creator" content="@nickbilton" />
-		<meta property="og:url" content="http://quebradev.com.br/podcast-0-comunidade-desenvolvimento-periferia.html">
+		<meta property="og:url" content="http://quebradev.com.br/">
 		<meta property="og:title" content="QuebraDev">
 		<meta property="og:description" content="O podcast perifatécnico.">
 		<meta property="og:image" content="https://quebradev.github.io/images/logo.png">
@@ -54,6 +54,31 @@
 					</section>
 
 					<div class="row">
+						<div class="4u">
+
+							<section class="box special">
+								<span class="image featured">
+									<a href="podcast-3-por-que-desenvolvimento-web.html">
+										<img src="images/por-que-desenvolvimento-web.jpg" alt="" width="400" />
+									</a>
+								</span>
+								<a href="podcast-3-por-que-desenvolvimento-web.html">
+									<h3>#3 - Por que desenvolvimento web.</h3>
+								</a>
+								<p> 
+									Depois de falar sobre backend e frontend, falamos por que ser desenvolvedor e principalmente
+									por que desenvolvedor web.
+									<br><br>
+								</p>
+								<ul class="actions">
+									<li>
+										<a href="podcast-3-por-que-desenvolvimento-web.html" class="button alt">Ver</a>
+									</li>
+								</ul>
+							</section>
+
+						</div>
+
 						<div class="4u">
 
 							<section class="box special">
