--- a/podcast-3-por-que-desenvolvimento-web.html
+++ b/podcast-3-por-que-desenvolvimento-web.html
@@ -18,7 +18,7 @@
 		<meta name="twitter:creator" content="@nickbilton" />
 		<meta property="og:url" content="http://quebradev.com.br/podcast-3-por-que-desenvolvimento-web.html">
 		<meta property="og:title" content="QuebraDev">
-		<meta property="og:description" content="Sabe o mundo backend? Ele não é tão dificil assim, vem com a gente e descubra como dar os primeiros passos nesta área de desenvolvimento.">
+		<meta property="og:description" content="Mas afinal, por que Desenvolvimento Web?">
 		<meta property="og:image" content="https://quebradev.github.io/images/podcast-3-por-que-desenvolvimento-web.jpg">
 	</head>
 	<body class="landing">
