--- a/podcast-3-por-que-desenvolvimento-web.html
+++ b/podcast-3-por-que-desenvolvimento-web.html
@@ -19,7 +19,7 @@
 		<meta property="og:url" content="http://quebradev.com.br/podcast-3-por-que-desenvolvimento-web.html">
 		<meta property="og:title" content="QuebraDev">
 		<meta property="og:description" content="Mas afinal, por que Desenvolvimento Web?">
-		<meta property="og:image" content="https://quebradev.github.io/images/podcast-3-por-que-desenvolvimento-web.jpg">
+		<meta property="og:image" content="https://quebradev.github.io/images/podcast-3-por-que-desenvolvimento-web.png">
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
