adicionei as musicas

--- a/podcast-4-por-que-linux.html
+++ b/podcast-4-por-que-linux.html
@@ -101,7 +101,14 @@
 								<h4>Músicas</h4>
 								<p>
 									<ul>
-                    <li></li>
+                    <li>The Brides of Funkenstein - Birdie</li>
+                    <li>Al Green - Free At Last</li>
+                    <li>Jake The Flake - Aint no Superman</li>
+                    <li>Mtume - Hip Dip Skippedabeat</li>
+                    <li>Ohio Players - Pride And Vanity</li>
+                    <li>Ray Davies Orchestra - Theme From Kiss Of Blood</li>
+                    <li>Zapp & Roger - Be Alright</li>
+                    <li>Cassiano - Onda</li>
 									</ul>
 								</p>
 							</div>
@@ -124,14 +131,6 @@
 							(d.head || d.body).appendChild(s);
 							})();
 						</script>
-						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>					
-					</div>
-				</section>
-
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="https://twitter.com/QuebraDev" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://github.com/QuebraDev" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://soundcloud.com/quebra-dev" class="icon fa-soundcloud"><span class="label">SoundCloud</span></a></li>
 						<li><a href="https://www.youtube.com/channel/UCcC9BomrjB8nM4WwGXxAkgg" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
@@ -165,3 +164,11 @@
 			</script>
 	</body>
 </html>
+<!DOCTYPE HTML>
+<!--
+	Alpha by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
