--- a/podcast-4-por-que-linux.html
+++ b/podcast-4-por-que-linux.html
@@ -19,7 +19,7 @@
 		<meta property="og:url" content="http://quebradev.com.br/podcast-4-por-que-linux.html">
 		<meta property="og:title" content="QuebraDev">
 		<meta property="og:description" content="Mas afinal, por que Linux?">
-		<meta property="og:image" content="https://quebradev.github.io/images/podcast-4-por-que-linux.png">
+		<meta property="og:image" content="https://quebradev.github.io/images/podcast-4-linux.png">
 	</head>
 	<body class="landing">
 		<div id="page-wrapper">
@@ -39,22 +39,25 @@
 				<section id="banner">
 					<img src="images/logo.png" width="300" />
 
-					<p> 
-					</p>
+          <p></p>
 				</section>
 
 			    <!-- Main -->
 				<section id="main" class="container">
 					<div class="box">
-							<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src=""></iframe>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/463218858&color=%23161616&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 						<br>
 
 						<h3>Download</h3>
-						<p>Faça o Download do episódio clicando <a href="https://api.soundcloud.com/tracks/456824541/download?client_id=LBCcHmRB8XSStWL6wKH2HPACspQlXg2P" target="_blank">AQUI</a></p>
+						<p>Faça o Download do episódio clicando <a href="https://api.soundcloud.com/tracks/463218858/download?client_id=LBCcHmRB8XSStWL6wKH2HPACspQlXg2P" target="_blank">AQUI</a></p>
 						
 						<h3>Sobre este episódio</h3>
-						<p>
-						</p>
+            <p> 
+              Dessa vez falamos um pouco dos motivos para usar Linux. Abordamos também as vantagens e desvantagens de usar, apresentando também algumas distribuições feitas especificamente para cada tipo de tarefa, como por exemplo, jogos ou edição de imagens.
+            </p>
+            <p>
+              Explicamos alguns detalhes mais técnicos envolvendo o linux e a sua arquitetura e como funcionam os gerenciadores de pacotes. No final demos algumas dicas para quem deseja se aventurar pelo linux. Tudo isso com muita música boa e um pouco de jazz
+            </p>
 
 						<div class="row">
 							<div class="6u 12u(mobilep)">
@@ -93,9 +96,61 @@
 								<h4>Links</h4>
 								<p>
 									<ul>
-										<li>
-											<a href=""></a>
-										</li>
+                    <li>
+                      <a href="https://www.gnu.org/home.pt-br.html" target="_blank">
+                        O Sistema Operacional GNU e o Movimento de Software Livre
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.vivaolinux.com.br/linux/" target="_blank">
+                        O que é o Linux
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.vivaolinux.com.br/download-linux/" target="_blank">
+                        Principais Distribuições Linux
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.escolalinux.com.br/blog/kernel-do-linux-o-que-e-e-para-que-serve" target="_blank">
+                        O que é o Kernel
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.gnu.org/philosophy/open-source-misses-the-point.pt-br.html" target="_blank">
+                        Diferenças entre Open Source e Software Livre
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://ninjadolinux.com.br/significado-da-palavra-ubuntu/" target="_blank">
+                        Origem da Palavra Ubuntu
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://meupinguim.com/por-que-o-linux-e-o-mac-os-x-sao-mais-seguros/" target="_blank">
+                        Segurança no Linux
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://www.vivaolinux.com.br/artigo/Gerenciadores-de-pacotes-GNULinux" target="_blank">
+                        Gerenciadores de Pacote
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://hernandes.io/Terminais-sao-legais-como-comecar-a-usar/" target="_blank">
+                        Comandos Básicos do Terminal
+                      </a>
+                    </li>
+                    <li>
+                      <a href="http://e-tinet.com/linux/aprender-linux-iniciantes/" target="_blank">
+                        Iniciando no Linux
+                      </a>
+                    </li>
+                    <li>
+                      <a href="https://canaltech.com.br/linux/Novo-no-Ubuntu-Saiba-por-onde-comecar/" target="_blank">
+                        Dicas para Ubuntu
+                      </a>
+                    </li>
 									</ul>
 								</p>
 								<h4>Músicas</h4>
