adicionei descrição na barra principal

--- a/podcast-4-por-que-linux.html
+++ b/podcast-4-por-que-linux.html
@@ -39,7 +39,7 @@
 				<section id="banner">
 					<img src="images/logo.png" width="300" />
 
-          <p></p>
+          <p>Dessa vez falamos um pouco dos motivos para usar Linux. Abordamos também as vantagens e desvantagens de usar, apresentando também algumas distribuições feitas especificamente para cada tipo de tarefa, como por exemplo, jogos ou edição de imagens.</p>
 				</section>
 
 			    <!-- Main -->
